# b2b

./: AGENTS.md  CLAUDE.md  Cargo.toml  FIXES.md  MIXER_REVIEW.md  build.rs
.cargo/: config.toml
c/: sip_shim.c
designs/: 2025.09.28 - HLD.md  2025.09.28 - Reqs.md  2025.09.29 - Demo Video.md  o2o.plan.toml  src-mixer-sink.plan.toml
plans/: example.plan.toml  sk.plan.toml  smk.plan.toml
scripts/: build_static.sh  vendor_baresip.sh
src/: cli.rs  logging.rs  main.rs  media.rs  metrics.rs  orchestrator.rs  sip.rs  sip_shim.rs  util.rs
src/roles/: mixer.rs  mod.rs  sink.rs  source.rs
